--- a/package.json
+++ b/package.json
@@ -4,10 +4,16 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "standard --verbose | snazzy",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "fixcode": "standard --fix",
+    "coverage": "jest --coverage && open coverage/lcov-report/index.html || xdg-open coverage/lcov-report/index.html"
   },
   "dependencies": {
     "apisauce": "^0.14.3",
+    "identity-obj-proxy": "^3.0.0",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "0.55.2",
@@ -19,22 +25,62 @@
     "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-mock-store": "^1.5.1",
     "redux-persist": "^5.9.1",
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "seamless-immutable": "^7.1.3"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.2",
     "babel-jest": "22.4.3",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react-native": "4.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "jest": "22.4.3",
+    "enzyme-to-json": "^3.3.3",
+    "husky": "^0.14.3",
+    "jest": "^22.4.3",
+    "jest-cli": "^22.4.3",
     "mockery": "^2.1.0",
     "react-dom": "^16.3.1",
-    "react-test-renderer": "^16.3.1"
+    "react-test-renderer": "^16.3.1",
+    "snazzy": "^7.1.1",
+    "standard": "^11.0.1"
   },
   "jest": {
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "./test/jestSetup.js"
+    ],
+    "setupFiles": [
+      "./test/jestSetup.js"
+    ],
+    "moduleNameMapper": {
+      "^.+\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "identity-obj-proxy"
+    },
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
     "preset": "react-native"
+  },
+  "standard": {
+    "parser": "babel-eslint",
+    "env": [
+      "jest"
+    ],
+    "globals": [
+      "describe",
+      "test",
+      "jest",
+      "expect",
+      "fetch",
+      "navigator",
+      "__DEV__",
+      "XMLHttpRequest",
+      "FormData",
+      "React$Element"
+    ]
   }
 }
