--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "jest": "^22.4.3",
     "jest-cli": "^22.4.3",
     "mockery": "^2.1.0",
+    "moxios": "^0.4.0",
     "react-dom": "^16.3.1",
     "react-test-renderer": "^16.3.1",
+    "sinon": "^4.5.0",
     "snazzy": "^7.1.1",
     "standard": "^11.0.1"
   },
